--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
+body {
+  background-color: rgb(225, 238, 250);
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  padding-top: 5vh;
 }
-
-.App-link {
-  color: #61dafb;
+.title {
+  font-size: 1.8rem;
+  color:rgb(0, 7, 141);
+  margin:-20px;
+  padding:0px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.keypad {
+  display: flex;
+  flex-direction: row;
+}
+.display {
+  width: 20vw;
+  background-color: rgb(201, 201, 203);
+  border:solid rgb(99, 102, 144) 4px;
+  border-radius: 15px;
+  margin: 20px;
+  color:rgb(0, 7, 141);
+}
+button {
+  font-size: 1.3rem;
+  cursor: pointer;
+  color:rgb(109, 109, 109);
+  background-color: rgb(231, 238, 253);
+  border-radius: 5px;
+}
+#start_stop {
+  background-color: rgb(253, 253, 147);
+}
+footer {
+  padding-top: 6vh;
+}
+.breakKeys {
+  padding-right: 0.5vw;
+}
+.sessionKeys {
+  padding-left: 0.5vw;
+}
+.breakKeys, .sessionKeys {
+  font-size: 1.3rem;
+}
+#timer-label {
+  margin: 0px;
+  padding: 0px;
+  font-size:1.9rem;
+}
+#time-left {
+  margin: 0px;
+  padding: 0px;
+  font-size: 2.1rem;
+  font-family: monospace, arial;
+  font-weight: bold;
+}
+footer {
+  color:rgb(109, 109, 109);
+  
+}
+footer a {
+  text-decoration: none;
+  color:rgb(109, 109, 109);
+}
+footer a:hover {
+  color:rgb(0, 7, 141);
 }
